Input Group | Flex shrink on Add on to prevent weird behaviors on Safari

--- a/src/scss/components/form/input/_addon.scss
+++ b/src/scss/components/form/input/_addon.scss
@@ -1,6 +1,7 @@
 .Input-addOn {
   @extend %Input-core;
   width: auto;
+  flex-shrink: 0;
 
   &.Input-addOn--prefix {
     border-right: 0;
